major bug fixing
bug related to room string.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 
 <style>
 
+.fl{float: left}
+
+.fr{float: right;}
+
 .box{
 	float:left;
 	padding: 10px;
@@ -41,7 +45,30 @@
 
 <body>
 
-<div class="container"	id="mainContainer">
+<div class="container fl"	id="mainContainer">
+
+	<div id="summaryContainer">
+		
+
+	</div>
+
+
+	<div class="mainBox" id="editBox">
+
+		
+
+
+	</div>
+
+	<div class="adbtn" id="addButton">
+
+
+	</div>
+
+</div>
+
+
+<div class="container fr"	id="mainContainerDummy">
 
 	<div id="summaryContainer">
 		
